include simple docking

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,11 @@ project(curcuma)
 include_directories(${PROJECT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${PROJECT_SOURCE_DIR}/external/eigen)
 
 add_executable(curcuma 
-        src/tools/geometry.h
+        src/capabilities/docking.cpp
         src/capabilities/rmsd.cpp
         src/core/molecule.cpp
+        src/core/pseudoff.cpp
+        src/tools/geometry.h
         src/main.cpp)
 set_property(TARGET curcuma PROPERTY CXX_STANDARD 14)
 install(TARGETS curcuma RUNTIME DESTINATION bin)
