add initial conformation filter tool

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,11 @@ include_directories(${PROJECT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${PROJECT_
 add_executable(curcuma 
         src/capabilities/docking.cpp
         src/capabilities/rmsd.cpp
+        src/capabilities/confscan.cpp
         src/core/molecule.cpp
         src/core/pseudoff.cpp
         src/tools/geometry.h
+        src/tools/general.h
         src/main.cpp)
 set_property(TARGET curcuma PROPERTY CXX_STANDARD 14)
 install(TARGETS curcuma RUNTIME DESTINATION bin)
