make xtb optional

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,98 @@
-cmake_minimum_required(VERSION 3.1)
+cmake_minimum_required(VERSION 3.15)
 project(curcuma)
 
 
+option (USE_XTB
+    "Include XTB in Curcuma" OFF)
+
+
+
+
+include_directories(SYSTEM ${PROJECT_SOURCE_DIR}/external/eigen)
+include_directories(${PROJECT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${PROJECT_SOURCE_DIR}/external/eigen)
+
+# Get the current working branch
+execute_process(
+  COMMAND git rev-parse --abbrev-ref HEAD
+  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+  OUTPUT_VARIABLE GIT_BRANCH
+  OUTPUT_STRIP_TRAILING_WHITESPACE
+)
+
+# Get the latest abbreviated commit hash of the working branch
+execute_process(
+  COMMAND git log -1 --format=%h
+  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+  OUTPUT_VARIABLE GIT_COMMIT_HASH
+  OUTPUT_STRIP_TRAILING_WHITESPACE
+)
+
+if(UNIX) # dont work on windows systems, compilation fails unfortranatly ...
+    execute_process(
+        COMMAND git log -1 --format=%aD
+        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+        OUTPUT_VARIABLE GIT_COMMIT_DATE
+        OUTPUT_STRIP_TRAILING_WHITESPACE
+    )
+endif(UNIX)
+
+add_definitions("-DGIT_COMMIT_HASH=${GIT_COMMIT_HASH}")
+add_definitions("-DGIT_BRANCH=${GIT_BRANCH}")
+add_definitions("-DGIT_COMMIT_DATE=${GIT_COMMIT_DATE}")
+
+
+if(CMAKE_COMPILER_IS_GNUCXX)
+    set (_UNIX  ON)
+
+    find_package(OpenMP)
+    if (OPENMP_FOUND)
+        set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+        set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
+#        set (openMP ON)
+    endif()
+endif()
+
+IF(CMAKE_COMPILER_IS_GNUCXX)
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wno-reorder -pedantic \
+                                           -Wextra -Wcast-align -Wcast-qual  -Wchar-subscripts  \
+                                           -Wcomment -Wdisabled-optimization \
+                                           -Wformat  -Wformat=2 -Wformat-nonliteral -Wformat-security\
+                                           -Wformat-y2k  -Wimport  -Winit-self  -Winline -Winvalid-pch\
+                                           -Wunsafe-loop-optimizations  -Wmissing-braces\
+                                           -Wmissing-field-initializers -Wmissing-format-attribute  \
+                                           -Wmissing-include-dirs -Wmissing-noreturn -Wpacked  -Wparentheses\
+                                           -Wpointer-arith -Wredundant-decls -Wsequence-point\
+                                           -Wsign-compare  -Wstack-protector -Wstrict-aliasing\
+                                           -Wstrict-aliasing=2 -Wswitch -Wsuggest-override\
+                                           -Wtrigraphs  -Wuninitialized -Wunknown-pragmas  -Wunreachable-code\
+                                           -Wunused -Wunused-function  -Wunused-label  -Wunused-parameter\
+                                           -Wunused-value  -Wunused-variable  -Wvariadic-macros\
+                                           -Wvolatile-register-var  -Wwrite-strings -Wdeprecated-declarations\
+                                           -Wno-error=unused-local-typedefs -Wno-error=enum-compare -Wno-narrowing -Werror=return-type")
+ENDIF(CMAKE_COMPILER_IS_GNUCXX)
+
+
+if(USE_XTB)
+
 add_subdirectory(external/xtb)
 
-include_directories(${PROJECT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${PROJECT_SOURCE_DIR}/external/eigen)
 
 set_target_properties(xtb_shared PROPERTIES
   IMPORTED_LOCATION "${CMAKE_CURRENT_BINARY_DIR}/libxtb_shared.so"
 )
 
+endif()
+
+configure_file (
+  "${PROJECT_SOURCE_DIR}/src/global_config.h.in"
+  "${PROJECT_BINARY_DIR}/src/global_config.h"
+)
+
+configure_file(
+  "${CMAKE_SOURCE_DIR}/src/version.h.in"
+  "${CMAKE_BINARY_DIR}/src/version.h"
+)
 
 add_executable(curcuma
         src/capabilities/optimiser/LBFGSInterface.h
@@ -26,7 +109,10 @@ add_executable(curcuma
         src/main.cpp)
 set_property(TARGET curcuma PROPERTY CXX_STANDARD 14)
 
-
-target_link_libraries(curcuma xtb_shared)
+if(USE_XTB)
+    target_link_libraries(curcuma xtb_shared)
+else()
+    target_link_libraries(curcuma)
+endif()
 
 install(TARGETS curcuma RUNTIME DESTINATION bin)
