add hydrogen bond scan for trajectories

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,6 +97,7 @@ configure_file(
 add_executable(curcuma
         src/capabilities/optimiser/LBFGSInterface.h
         src/capabilities/confscan.cpp
+        src/capabilities/pairmapper.cpp
         src/capabilities/docking.cpp
         src/capabilities/rmsd.cpp
         src/capabilities/nebdocking.cpp
