update README, Changelog and xtb linking

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,12 @@ cmake_minimum_required(VERSION 3.15)
 project(curcuma)
 
 
-option (USE_XTB
-    "Include XTB in Curcuma" OFF)
 
+option (COMPILE_XTB
+    "Compile XTB and use those libs" OFF)
 
+option (LINK_XTB
+    "Link to prebuilt XTB library" OFF)
 
 
 include_directories(SYSTEM ${PROJECT_SOURCE_DIR}/external/eigen)
@@ -44,15 +46,15 @@ add_definitions("-DGIT_COMMIT_DATE=${GIT_COMMIT_DATE}")
 if(CMAKE_COMPILER_IS_GNUCXX)
     set (_UNIX  ON)
 
-    find_package(OpenMP)
-    if (OPENMP_FOUND)
-        set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
-        set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
-        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
-#        set (openMP ON)
-    endif()
-endif()
 
+endif()
+find_package(OpenMP)
+if (OPENMP_FOUND)
+    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
+    set (openMP ON)
+endif()
 IF(CMAKE_COMPILER_IS_GNUCXX)
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wno-reorder -pedantic \
                                            -Wextra -Wcast-align -Wcast-qual  -Wchar-subscripts  \
@@ -73,16 +75,43 @@ IF(CMAKE_COMPILER_IS_GNUCXX)
 ENDIF(CMAKE_COMPILER_IS_GNUCXX)
 
 
-if(USE_XTB)
-
-add_subdirectory(external/xtb)
-
-
-set_target_properties(xtb_shared PROPERTIES
-  IMPORTED_LOCATION "${CMAKE_CURRENT_BINARY_DIR}/libxtb_shared.so"
-)
-
+if(COMPILE_XTB)
+    add_subdirectory(external/xtb)
+    set_target_properties(xtb_shared PROPERTIES
+      IMPORTED_LOCATION "${CMAKE_CURRENT_BINARY_DIR}/libxtb_shared.so"
+    )
+    set(USE_XTB on)
 endif()
+
+if(LINK_XTB)
+    if(COMPILE_XTB)
+        message(WARNING "Actually, I will link curcuma to the currently building xtb not a pre-built one")
+    else()
+        if(DEFINED XTB_DIR)
+            # Check does not work, strange
+            #if(EXISTS '${XTB_DIR}/libxtb.so.6')
+            #    message("XTB found :-)")
+            #else()
+            #    message("Not XTB at given location")
+            #endif()
+        else()
+            message(FATAL_ERROR "Please set XTB_DIR as variable")
+        endif()
+
+    endif()
+    set(USE_XTB on)
+endif()
+
+
+
+
+if(NOT EXISTS src/json.hpp)
+  file(DOWNLOAD https://github.com/nlohmann/json/releases/download/v3.7.3/json.hpp src/json.hpp
+       TIMEOUT 60  # seconds
+       EXPECTED_HASH SHA512=4ecbbdd2c5e88c897096670cfdaa7ec00483ac9ed6e8ac33be23b05f4da70f213e10c4b381f5e8799619a24a58f417f04dd442d1d59a2e0bfca3385007e620d5
+       TLS_VERIFY ON)
+endif()
+
 
 configure_file (
   "${PROJECT_SOURCE_DIR}/src/global_config.h.in"
@@ -108,25 +137,36 @@ add_executable(curcuma
         src/core/pseudoff.cpp
         src/tools/geometry.h
         src/tools/general.h
+        src/tools/parser.h
         src/main.cpp)
 set_property(TARGET curcuma PROPERTY CXX_STANDARD 14)
 
 if(USE_XTB)
-    target_link_libraries(curcuma xtb_shared)
+    if(COMPILE_XTB)
+        target_link_libraries(curcuma xtb_shared pthread dl)
+    else()
+        target_link_libraries(curcuma ${XTB_DIR}/libxtb.so pthread dl)
+    endif()
 else()
-    target_link_libraries(curcuma)
+    target_link_libraries(curcuma  pthread dl)
 endif()
 
 
 add_executable(curcuma_helper
         src/helpers/main.cpp)
-set_property(TARGET curcuma_helper PROPERTY CXX_STANDARD 14)
+set_property(TARGET curcuma_helper PROPERTY CXX_STANDARD 17)
+
 if(USE_XTB)
-add_executable(xtb_helper
+    add_executable(xtb_helper
         src/helpers/xtb_helper.cpp
         )
-    set_property(TARGET xtb_helper PROPERTY CXX_STANDARD 14)
-    target_link_libraries(xtb_helper xtb_shared)
+    set_property(TARGET xtb_helper PROPERTY CXX_STANDARD 17)
+    if(COMPILE_XTB)
+        target_link_libraries(xtb_helper xtb_shared pthread dl)
+    else()
+        target_link_libraries(xtb_helper ${XTB_DIR}/libxtb.so pthread dl)
+    endif()
 endif()
+
 install(TARGETS curcuma RUNTIME DESTINATION bin)
 install(TARGETS curcuma_helper RUNTIME DESTINATION bin)
