--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "external/LBFGSpp"]
 	path = external/LBFGSpp
 	url = https://github.com/yixuan/LBFGSpp/
+[submodule "external/CxxThreadPool"]
+	path = external/CxxThreadPool
+	url = https://github.com/conradhuebler/CxxThreadPool.git
