--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -32,3 +32,30 @@ jobs:
       with:
         name: Curcuma_xtb
         path: curcuma_xtb.tar.xz
+
+    - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        with:
+          tag_name: 0.0.${{ github.run_id  }}
+          release_name: Nightly 0.0.${{ github.run_id }}
+          draft: true
+          prerelease: true
+    - name: Upload Release Asset
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./curcuma_no_xtb.tar.xyz
+          asset_name: Curcuma without xtb
+          asset_content_type: application/zip
+       with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./curcuma_xtb.tar.xyz
+          asset_name: Curcuma with xtb
+          asset_content_type: application/zip
+
