--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -54,6 +54,12 @@ jobs:
         asset_path: ./curcuma_no_xtb.tar.xyz
         asset_name: Curcuma without xtb
         asset_content_type: application/zip
+        
+    - name: Upload Release Asset
+      id: upload-release-asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./curcuma_xtb.tar.xyz
