--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -55,7 +55,7 @@ jobs:
         asset_name: Curcuma without xtb
         asset_content_type: application/zip
         
-    - name: Upload Release Asset
+    - name: Upload Release Asset 2
       id: upload-release-asset
       uses: actions/upload-release-asset@v1
       env:
