--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -39,8 +39,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
       with:
-        tag_name: 0.0.${{ github.run_id  }}
-        release_name: Nightly 0.0.${{ github.run_id }}
+        tag_name: 0.0.${{ id  }}
+        release_name: Nightly 0.0.${{ id }}
         draft: true
         prerelease: true
 
@@ -51,8 +51,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./curcuma_no_xtb.tar.xyz
-        asset_name: Curcuma without xtb
+        asset_path: ./curcuma_no_xtb.tar.xz
+        asset_name: Curcuma
         asset_content_type: application/zip
         
 
