--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -39,8 +39,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
       with:
-        tag_name: 0.0.${{ id  }}
-        release_name: Nightly 0.0.${{ id }}
+        tag_name: 0.0.${{ create_release  }}
+        release_name: Nightly 0.0.${{ create_release }}
         draft: true
         prerelease: true
 
