--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -23,15 +23,15 @@ jobs:
 #    - name: Deploy
 #      run: sh scripts/deploy_unix.sh
       
-    - uses: actions/upload-artifact@v1
-      with:
-        name: Curcuma_no_xtb
-        path: curcuma_no_xtb.tar.xz
+#    - uses: actions/upload-artifact@v1
+#      with:
+#        name: Curcuma_no_xtb
+#        path: curcuma_no_xtb.tar.xz
 
-    - uses: actions/upload-artifact@v1
-      with:
-        name: Curcuma_xtb
-        path: curcuma_xtb.tar.xz
+#    - uses: actions/upload-artifact@v1
+#      with:
+#        name: Curcuma_xtb
+#        path: curcuma_xtb.tar.xz
 
     - name: Create Release
       id: create_release
