--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -3,14 +3,31 @@ name: AutomaticBuild
 on:
   push:
     branches: [ master ] #Everytime master branch is updated
-    #    paths: ['.github/workflows/*',  'src/*'] #only when these files are modifed
+    paths: ['.github/workflows/*',  'src/*'] #only when these files are modifed
   pull_request:
     branches: [ master ] #for every pull request going to master
-    #    paths: ['.github/workflows/*', 'src/*'] #only when these files are modifed
+    paths: ['.github/workflows/*', 'src/*'] #only when these files are modifed
 
 jobs:
-  linux:
 
+  makerelease:
+    runs-on: ubuntu-latest
+    outputs:
+      url: ${{ steps.create_release.outputs.upload_url }}
+      version: 0.0.${{ github.run_number  }}
+    steps:
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        with:
+          tag_name: 0.0.${{ github.run_number  }}
+          release_name: Nightly 0.0.${{ github.run_number }}
+          draft: false
+          prerelease: true
+  linux:
+    needs: [makerelease]
     runs-on: ubuntu-16.04
     
     steps:
@@ -22,17 +39,6 @@ jobs:
 
     - name: Deploy
       run: sh scripts/deploy_unix_github.sh 
-      
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
-      with:
-        tag_name: 0.0.${{ github.run_number  }}
-        release_name: Nightly 0.0.${{ github.run_number }}
-        draft: true
-        prerelease: true
 
     - name: Upload Release Asset
       id: upload-release-asset
@@ -40,9 +46,9 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        upload_url: ${{ needs.makerelease.outputs.url }}
         asset_path: ./packages/curcuma-nightly-x86_64.AppImage
-        asset_name: curcuma
+        asset_name: curcuma-nightly-${{ needs.makerelease.outputs.version }}-x86_64-Linux.AppImage
         asset_content_type: application/zip
         
 
