--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -23,7 +23,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
           tag_name: 0.0.${{ github.run_number  }}
-          release_name: Nightly 0.0.${{ github.run_number }}
+          release_name: Curcuma 0.0.${{ github.run_number }}
           draft: false
           prerelease: true
   linux:
