update optimiser, prepare for threaded optimisation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ option (LINK_XTB
 option (C17
     "Use C++ 17 Standard" ON)
 
-include_directories(SYSTEM ${PROJECT_SOURCE_DIR}/external/eigen ${PROJECT_SOURCE_DIR}/external/LBFGSpp/include ${CMAKE_CURRENT_BINARY_DIR}/src/)
+include_directories(SYSTEM ${PROJECT_SOURCE_DIR}/external/eigen ${PROJECT_SOURCE_DIR}/external/LBFGSpp/include ${PROJECT_SOURCE_DIR}/external/CppNumericalSolvers/include/cppoptlib  ${CMAKE_CURRENT_BINARY_DIR}/src/)
 include_directories(${PROJECT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} )
 
 # Get the current working branch
@@ -137,6 +137,7 @@ configure_file(
 set(curcuma_core_SRC
         src/capabilities/optimiser/LBFGSInterface.h
         src/capabilities/curcumamethod.cpp
+        src/capabilities/curcumaopt.cpp
         src/capabilities/confscan.cpp
         src/capabilities/confstat.cpp
         src/capabilities/docking.cpp
