--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "external/CxxThreadPool"]
 	path = external/CxxThreadPool
 	url = https://github.com/conradhuebler/CxxThreadPool.git
+[submodule "external/CppNumericalSolvers"]
+	path = external/CppNumericalSolvers
+	url = https://github.com/PatWie/CppNumericalSolvers
