add fmt, clean optimisation and docking source code

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "external/CppNumericalSolvers"]
 	path = external/CppNumericalSolvers
 	url = https://github.com/PatWie/CppNumericalSolvers
+[submodule "external/fmt"]
+	path = external/fmt
+	url = https://github.com/fmtlib/fmt
