replace xtb tblite - dropping GFN-FF in this commit ...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -181,6 +181,7 @@ set(curcuma_core_SRC
         src/capabilities/simplemd.cpp
         src/core/molecule.cpp
         src/core/xtbinterface.cpp
+        src/core/tbliteinterface.cpp
         src/core/pseudoff.cpp
         src/tools/formats.h
         src/tools/geometry.h
@@ -212,7 +213,7 @@ if(USE_XTB)
         #target_link_libraries(curcuma_core lib-xtb-shared -m64 -Wl,--no-as-needed -L/opt/intel/oneapi/mkl/latest/lib/intel64/ libmkl_intel_lp64.so libmkl_intel_thread.so libmkl_core.so libmkl_gnu_thread.so pthread -lm dl fmt::fmt-header-only)
 	#target_link_libraries(curcuma_core lib-xtb-shared -Wl,--no-as-needed -L/opt/intel/oneapi/mkl/latest/lib/intel64/ -lmkl_intel_lp64 -lmkl_core -lmkl_gnu_thread -lpthread -lm -ldl fmt::fmt-header-only)
         #target_link_libraries(curcuma_core )
-        target_link_libraries(curcuma_core PUBLIC "mctc-lib" lib-xtb-shared  pthread dl fmt::fmt-header-only)
+        target_link_libraries(curcuma_core PUBLIC "mctc-lib" lib-xtb-shared tblite-lib gfortran pthread dl fmt::fmt-header-only)
     else()
         target_link_libraries(curcuma_core ${XTB_DIR}/libxtb.so pthread dl fmt::fmt-header-only)
     endif()
