--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -34,6 +34,10 @@ jobs:
     - uses: actions/checkout@v1
       with:
         submodules: true
+    - uses: awalsh128/cache-apt-pkgs-action@latest
+      with:
+        packages: liblapacke-dev
+        version: 1.0
     - name: Update Modules and Build
       run: sh scripts/build_unix_github.sh
 
